added missing security provider for the now restricted internal sun classes