@@ -19,6 +19,7 @@ dependencies {
     implementation libs.kotlin.serialization_json
     implementation libs.netty
     implementation libs.wire
+    implementation libs.bouncycastle
 
     implementation libs.slf4j
 
@@ -66,7 +67,7 @@ sourceSets {
 
 test {
     jvmArgs = ["-Dio.netty.leakDetection.level=PARANOID","-Dkonem.secure.keyStoreLocation=config/keystore/konem.jks","-Dkonem.secure.keyStoreType=JKS","-Dkonem.secure.keyStorePassword=test123",
-    "--add-opens","java.base/jdk.internal.misc=ALL-UNNAMED","-Dio.netty.tryReflectionSetAccessible=true","--illegal-access=warn"]
+    "--add-opens","java.base/jdk.internal.misc=ALL-UNNAMED","--add-exports=java.base/sun.security.x509=ALL-UNNAMED","-Dio.netty.tryReflectionSetAccessible=true","--illegal-access=warn"]
 
     systemProperties 'SKIP.LONG': '1'
 
